# realTimeTractogramVisualizer

./: .gitignore  CMakeLists.txt  INSTALL_ACVD-static.sh  INSTALL_QT-6.2.0-static.sh  INSTALL_VTK-9.1.0-static.sh  README.md  build.sh  compile_commands.json
.cache/clangd/index/: aux.cpp.FF7B39EF4B6ED1B5.idx  aux.h.07FCEC2502182FA4.idx  brainmesh_handler.cpp.8787DEC06EC1412A.idx  brainmesh_handler.h.F44616F44262E7D1.idx  main.cpp.555C506C453AF212.idx  rttvis_gui.cpp.D24215BA62A96A8E.idx  rttvis_gui.h.9A1AE129146219D1.idx  trekker_interface.cpp.D5120C4918127388.idx  trekker_interface.h.2CACD9E20003FCED.idx
lib/ptx/: cuda_compile_ptx_1_generated_Cylinder.cu.ptx  cuda_compile_ptx_1_generated_PerspectiveCamera.cu.ptx  cuda_compile_ptx_1_generated_Phong.cu.ptx  cuda_compile_ptx_1_generated_Sphere.cu.ptx  cuda_compile_ptx_1_generated_TriangleMesh.cu.ptx
src/: CMakeLists.txt  aux.cpp  aux.h  brainmesh_handler.cpp  brainmesh_handler.h  gui_about.ui  main.cpp  resources.qrc  rttvis_app.cpp  rttvis_app.h  rttvis_app.ui  rttvis_gui.cpp  rttvis_gui.h  rttvis_gui.ui  rttvis_gui_VTK7.ui  rttvis_gui_VTK8.ui  rttvis_gui_VTK9.ui  trekker_interface.cpp  trekker_interface.h
